// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should render correctly when fullWidth & required props are falsy 1`] = `
.c1 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c7 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c4 {
  grid-area: field;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c2 {
  grid-area: label;
  align-self: center;
  user-select: none;
}

.c8 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c0 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  align-items: center;
  grid-template-columns: minmax(max-content, 25%) minmax(auto, 80%);
  grid-template-areas: 'label field' 'random description';
}

.c0 .c3 {
  display: inline-flex;
  align-items: center;
  flex-direction: row;
}

.c5 {
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  overflow: hidden;
  width: max-content;
  height: max-content;
}

.c5.c5.c5 {
  flex-direction: row;
  align-items: center;
}

.c5:focus-within {
  border-color: #012040;
}

.c5>* {
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  padding: 0.8rem;
  color: #435465;
}

.c6 {
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c6::placeholder {
  color: #98A7B7;
}

.c6::-webkit-file-upload-button {
  visibility: hidden;
}

<div>
  <div
    class="c0"
    id="medly-input-field"
    labelposition="left"
  >
    <label
      class="c1 c2"
      for="medly-input"
      labelposition="left"
    >
      Email Address
    </label>
    <div
      class="c3 c4 c5"
    >
      <input
        class="c6"
        id="medly-input"
        placeholder="Enter Email Address"
        type="email"
      />
    </div>
    <span
      class="c7 c8"
      textalign="initial"
      textcolor="inherit"
    >
      We will never share your email with anyone
    </span>
  </div>
</div>
`;

exports[`Input component should render correctly when it is disabled 1`] = `
.c2 {
  grid-area: field;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c0 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  align-items: center;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c0 .c1 {
  display: inline-flex;
  align-items: flex-start;
  flex-direction: column;
}

.c3 {
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  overflow: hidden;
  width: max-content;
  height: max-content;
}

.c3.c3.c3 {
  flex-direction: row;
  align-items: center;
}

.c3:focus-within {
  border-color: #012040;
}

.c3>* {
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  padding: 0.8rem;
  color: #435465;
}

.c4 {
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: not-allowed;
  background-color: #C7D0D8;
}

.c4::placeholder {
  color: #98A7B7;
}

.c4::-webkit-file-upload-button {
  visibility: hidden;
}

<div>
  <div
    class="c0"
    id="email-input-field"
    labelposition="top"
  >
    <div
      class="c1 c2 c3"
    >
      <input
        class="c4"
        disabled=""
        id="email-input"
        placeholder="Enter Email Address"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Input component should render correctly when label and description are not given 1`] = `
.c2 {
  grid-area: field;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c0 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  align-items: center;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c0 .c1 {
  display: inline-flex;
  align-items: flex-start;
  flex-direction: column;
}

.c3 {
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  overflow: hidden;
  width: max-content;
  height: max-content;
}

.c3.c3.c3 {
  flex-direction: row;
  align-items: center;
}

.c3:focus-within {
  border-color: #012040;
}

.c3>* {
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  padding: 0.8rem;
  color: #435465;
}

.c4 {
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c4::placeholder {
  color: #98A7B7;
}

.c4::-webkit-file-upload-button {
  visibility: hidden;
}

<div>
  <div
    class="c0"
    id="email-input-field"
    labelposition="top"
  >
    <div
      class="c1 c2 c3"
    >
      <input
        class="c4"
        id="email-input"
        placeholder="Enter Email Address"
        type="email"
      />
    </div>
  </div>
</div>
`;

exports[`Input component should render correctly with all the props given 1`] = `
.c1 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0px 0.8rem 0px;
  cursor: default;
}

.c1 ::after {
  color: red;
  content: ' *';
}

.c9 {
  margin: 0;
  color: grey;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c4 {
  grid-area: field;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c2 {
  grid-area: label;
  align-self: center;
  user-select: none;
}

.c10 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: grey;
}

.c0 {
  margin: 0.8rem 0;
  display: grid;
  align-items: center;
  grid-template-areas: 'label' 'field' 'description';
}

.c0 .c3 {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
}

.c5 {
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  overflow: hidden;
  width: 100%;
  height: max-content;
}

.c5.c5.c5 {
  flex-direction: row;
  align-items: center;
}

.c5:focus-within {
  border-color: #012040;
}

.c5>* {
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  padding: 0.8rem;
  color: #435465;
}

.c7 {
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c7::placeholder {
  color: #98A7B7;
}

.c7::-webkit-file-upload-button {
  visibility: hidden;
}

.c6 {
  background-color: #eff2f4;
}

.c8 {
  background-color: #eff2f4;
}

<div>
  <div
    class="c0"
    id="email-input-field"
    labelposition="top"
  >
    <label
      class="c1 c2"
      for="email-input"
      labelposition="top"
      required=""
    >
      Email Address
    </label>
    <div
      class="c3 c4 c5"
    >
      <span
        class="c6"
      >
        www.
      </span>
      <input
        class="c7"
        id="email-input"
        placeholder="Enter Email Address"
        required=""
        type="email"
      />
      <span
        class="c8"
      >
        .com
      </span>
    </div>
    <span
      class="c9 c10"
      textalign="initial"
      textcolor="grey"
    >
      We will never share your email with anyone
    </span>
  </div>
</div>
`;
